package main

import (
	"context"

	"github.com/muthuramanecs03g/nfcli/gen-go/UpfGtp5g"
)

func (g *Gtp5gThriftServer) GetPdr(ctx context.Context, iface string, id int32) (_r *UpfGtp5g.GetPdrResponse, _err error) {
	return nil, nil
}

func (g *Gtp5gThriftServer) GetFar(ctx context.Context, iface string, id int32) (_r *UpfGtp5g.GetFarResponse, _err error) {
	return nil, nil
}

func (g *Gtp5gThriftServer) GetQer(ctx context.Context, iface string, id int32) (_r *UpfGtp5g.GetQerResponse, _err error) {
	return nil, nil
}
